csource/include/httpserver.h


struct http_string_s;
struct http_server_s;
struct http_request_s;
struct http_response_s;
int http_server_loop(struct http_server_s *server);
struct http_server_s *
http_server_init(int port, void (*handler)(struct http_request_s *));
int http_server_listen_addr(struct http_server_s *server, const char *ipaddr);
int http_server_listen(struct http_server_s *server);
int http_server_listen_addr_poll(struct http_server_s *server,
                                 const char *ipaddr);
int http_server_listen_poll(struct http_server_s *server);
int http_server_poll(struct http_server_s *server);
int http_request_has_flag(struct http_request_s *request, int flag);
struct http_string_s http_request_method(struct http_request_s *request);
struct http_string_s http_request_target(struct http_request_s *request);
struct http_string_s http_request_body(struct http_request_s *request);
struct http_string_s http_request_header(struct http_request_s *request,
                                         char const *key);
int http_request_iterate_headers(struct http_request_s *request,
                                 struct http_string_s *key,
                                 struct http_string_s *val, int *iter);
void http_request_set_userdata(struct http_request_s *request, void *data);
void *http_request_userdata(struct http_request_s *request);
void http_server_set_userdata(struct http_server_s *server, void *data);
void *http_request_server_userdata(struct http_request_s *request);
void http_request_connection(struct http_request_s *request, int directive);
void http_request_free_buffer(struct http_request_s *request);
struct http_response_s *http_response_init();
void http_response_status(struct http_response_s *response, int status);
void http_response_header(struct http_response_s *response, char const *key,
                          char const *value);
void http_response_body(struct http_response_s *response, char const *body,
                        int length);
void http_respond(struct http_request_s *request,
                  struct http_response_s *response);
void http_respond_chunk(struct http_request_s *request,
                        struct http_response_s *response,
                        void (*notify_done)(struct http_request_s *));
void http_respond_chunk_end(struct http_request_s *request,
                            struct http_response_s *response);
void http_request_read_chunk(struct http_request_s *request,
                             void (*chunk_cb)(struct http_request_s *));
struct http_string_s http_request_chunk(struct http_request_s *request);
#define HTTP_KEEP_ALIVE 1
#define HTTP_CLOSE 0
enum hsh_token_e {
  HSH_TOK_METHOD,
  HSH_TOK_TARGET,
  HSH_TOK_VERSION,
  HSH_TOK_HEADER_KEY,
  HSH_TOK_HEADER_VALUE,
  HSH_TOK_HEADERS_DONE,
  HSH_TOK_BODY,
  HSH_TOK_NONE,
  HSH_TOK_ERR
};
struct hsh_token_s {
  enum hsh_token_e type;
  uint8_t flags;
  int len;
  int index;
};
typedef struct http_request_s {
#ifdef KQUEUE
  void (*handler)(struct kevent *ev);
#else
  epoll_cb_t handler;
  epoll_cb_t timer_handler;
  int timerfd;
#endif
  void (*chunk_cb)(struct http_request_s *);
  void *data;
  struct hsh_buffer_s buffer;
  struct hsh_parser_s parser;
  struct hs_token_array_s tokens;
  int state;
  int socket;
  int timeout;
  int64_t bytes_written;
  struct http_server_s *server;
  char flags;
} http_request_t;
typedef struct http_server_s {
#ifdef KQUEUE
  void (*handler)(struct kevent *ev);
#else
  epoll_cb_t handler;
  epoll_cb_t timer_handler;
#endif
  int64_t memused;
  int socket;
  int port;
  int loop;
  int timerfd;
  socklen_t len;
  void (*request_handler)(http_request_t *);
  struct sockaddr_in addr;
  void *data;
  char date[32];
} http_server_t;
struct http_string_s {
  char const *buf;
  int len;
};
typedef struct http_string_s http_string_t;
struct hsh_token_s hsh_parser_exec(struct hsh_parser_s *parser,
                                   struct hsh_buffer_s *buffer,
                                   int max_buf_capacity);
#define HTTP_FLG_STREAMED 0x1
struct http_request_s;
enum hs_read_rc_e {
  HS_READ_RC_SUCCESS,
  HS_READ_RC_PARSE_ERR,
  HS_READ_RC_SOCKET_ERR
};
struct hs_read_opts_s {
  int64_t max_request_buf_capacity;
  int eof_rc;
  int initial_request_buf_capacity;
};
enum hs_read_rc_e
hs_read_request_and_exec_user_cb(struct http_request_s *request,
                                 struct hs_read_opts_s opts);
struct http_request_s;
typedef struct http_response_s {
  http_header_t *headers;
  char const *body;
  int content_length;
  int status;
} http_response_t;
typedef void (*hs_evt_cb_t)(struct kevent *ev);
typedef void (*hs_evt_cb_t)(struct epoll_event *ev);
struct http_request_s;
struct http_server_s;
struct http_server_s *hs_server_init(int port,
                                     void (*handler)(struct http_request_s *),
                                     hs_evt_cb_t accept_cb,
                                     hs_evt_cb_t timer_cb);
struct http_request_s;
enum hs_write_rc_e {
  HS_WRITE_RC_SUCCESS,
  HS_WRITE_RC_SUCCESS_CHUNK,
  HS_WRITE_RC_SUCCESS_CLOSE,
  HS_WRITE_RC_CONTINUE,
  HS_WRITE_RC_SOCKET_ERR
};
enum hs_write_rc_e hs_write_socket(struct http_request_s *request);
struct http_request_s;
struct http_server_s;
struct http_request_s;
int http_request_has_flag(http_request_t *request, int flag) {
  return HTTP_FLAG_CHECK(request->flags, flag);
}
int http_server_loop(http_server_t *server) { return server->loop; }
http_server_t *http_server_init(int port, void (*handler)(http_request_t *)) {
#ifdef KQUEUE
  return hs_server_init(port, handler, hs_on_kqueue_server_event, NULL);
#else
  return hs_server_init(port, handler, hs_on_epoll_server_connection_event,
                        hs_on_epoll_server_timer_event);
#endif
}
void http_request_free_buffer(http_request_t *request) {
  _hs_buffer_free(&request->buffer, &request->server->memused);
}
void *http_request_userdata(http_request_t *request) { return request->data; }
void http_request_set_userdata(http_request_t *request, void *data) {
  request->data = data;
}
void http_server_set_userdata(struct http_server_s *serv, void *data) {
  serv->data = data;
}
void *http_request_server_userdata(struct http_request_s *request) {
  return request->server->data;
}
int http_request_iterate_headers(http_request_t *request, http_string_t *key,
                                 http_string_t *val, int *iter) {
  return hs_request_iterate_headers(request, key, val, iter);
}
http_string_t http_request_header(http_request_t *request, char const *key) {
  return hs_request_header(request, key);
}
void http_request_connection(http_request_t *request, int directive) {
  hs_request_set_keep_alive_flag(request, directive);
}
http_string_t http_request_chunk(struct http_request_s *request) {
  return hs_request_chunk(request);
}
http_response_t *http_response_init() { return hs_response_init(); }
void http_response_header(http_response_t *response, char const *key,
                          char const *value) {
  return hs_response_set_header(response, key, value);
}
void http_response_status(http_response_t *response, int status) {
  hs_response_set_status(response, status);
}
void http_response_body(http_response_t *response, char const *body,
                        int length) {
  hs_response_set_body(response, body, length);
}
void http_respond(http_request_t *request, http_response_t *response) {
  hs_request_respond(request, response, hs_request_begin_write);
}
void http_respond_chunk(http_request_t *request, http_response_t *response,
                        void (*cb)(http_request_t *)) {
  hs_request_respond_chunk(request, response, cb, hs_request_begin_write);
}
void http_respond_chunk_end(http_request_t *request,
                            http_response_t *response) {
  hs_request_respond_chunk_end(request, response, hs_request_begin_write);
}
http_string_t http_request_method(http_request_t *request) {
  return hs_get_token_string(request, HSH_TOK_METHOD);
}
http_string_t http_request_target(http_request_t *request) {
  return hs_get_token_string(request, HSH_TOK_TARGET);
}
http_string_t http_request_body(http_request_t *request) {
  return hs_get_token_string(request, HSH_TOK_BODY);
}
int http_server_listen(http_server_t *serv) {
  return hs_server_run_event_loop(serv, NULL);
}
int http_server_listen_addr(http_server_t *serv, const char *ipaddr) {
  return hs_server_run_event_loop(serv, ipaddr);
}
int http_server_poll(http_server_t *serv) {
  return hs_server_poll_events(serv);
}
int http_server_listen_poll(http_server_t *serv) {
  hs_server_listen_on_addr(serv, NULL);
  return 0;
}
int http_server_listen_addr_poll(http_server_t *serv, const char *ipaddr) {
  hs_server_listen_on_addr(serv, ipaddr);
  return 0;
}
void http_request_read_chunk(struct http_request_s *request,
                             void (*chunk_cb)(struct http_request_s *)) {
  request->state = HTTP_SESSION_READ;
  request->chunk_cb = chunk_cb;
  hs_request_begin_read(request);
}
void _hs_exec_callback(http_request_t *request,
                       void (*cb)(struct http_request_s *)) {
  request->state = HTTP_SESSION_NOP;
  cb(request);
}
enum hs_read_rc_e
_hs_parse_buffer_and_exec_user_cb(http_request_t *request,
                                  int max_request_buf_capacity) {
  enum hs_read_rc_e rc = HS_READ_RC_SUCCESS;
  do {
    struct hsh_token_s token = hsh_parser_exec(
        &request->parser, &request->buffer, max_request_buf_capacity);
    switch (token.type) {
    case HSH_TOK_HEADERS_DONE:
      _hs_token_array_push(&request->tokens, token);
      if (HTTP_FLAG_CHECK(token.flags, HSH_TOK_FLAG_STREAMED_BODY) ||
          HTTP_FLAG_CHECK(token.flags, HSH_TOK_FLAG_NO_BODY)) {
        HTTP_FLAG_SET(request->flags, HTTP_FLG_STREAMED);
        _hs_exec_callback(request, request->server->request_handler);
        return rc;
      }
      break;
    case HSH_TOK_BODY:
      _hs_token_array_push(&request->tokens, token);
      if (HTTP_FLAG_CHECK(token.flags, HSH_TOK_FLAG_SMALL_BODY)) {
        _hs_exec_callback(request, request->server->request_handler);
      } else {
        if (HTTP_FLAG_CHECK(token.flags, HSH_TOK_FLAG_BODY_FINAL) &&
            token.len > 0) {
          _hs_exec_callback(request, request->chunk_cb);
          struct hsh_token_s token = {};
          memset(&token, 0, sizeof(struct hsh_token_s));
          token.type = HSH_TOK_BODY;
          _hs_token_array_push(&request->tokens, token);
          _hs_exec_callback(request, request->chunk_cb);
        } else {
          _hs_exec_callback(request, request->chunk_cb);
        }
      }
      return rc;
    case HSH_TOK_ERR:
      return HS_READ_RC_PARSE_ERR;
    case HSH_TOK_NONE:
      return rc;
    default:
      _hs_token_array_push(&request->tokens, token);
      break;
    }
  } while (1);
}
enum hs_read_rc_e hs_read_request_and_exec_user_cb(http_request_t *request,
                                                   struct hs_read_opts_s opts) {
  request->state = HTTP_SESSION_READ;
  request->timeout = HTTP_REQUEST_TIMEOUT;
  if (request->buffer.buf == NULL) {
    _hs_buffer_init(&request->buffer, opts.initial_request_buf_capacity,
                    &request->server->memused);
    hsh_parser_init(&request->parser);
  }
  if (_hs_buffer_requires_read(&request->buffer)) {
    int bytes = _hs_read_into_buffer(&request->buffer, request->socket,
                                     &request->server->memused,
                                     opts.max_request_buf_capacity);
    if (bytes == opts.eof_rc) {
      return HS_READ_RC_SOCKET_ERR;
    }
  }
  return _hs_parse_buffer_and_exec_user_cb(request,
                                           opts.max_request_buf_capacity);
}
http_server_t *hs_server_init(int port, void (*handler)(http_request_t *),
                              hs_evt_cb_t accept_cb,
                              hs_evt_cb_t epoll_timer_cb) {
  http_server_t *serv = (http_server_t *)malloc(sizeof(http_server_t));
  assert(serv != NULL);
  serv->port = port;
  serv->memused = 0;
  serv->handler = accept_cb;
  _hs_server_init_events(serv, epoll_timer_cb);
  hs_generate_date_time(serv->date);
  serv->request_handler = handler;
  return serv;
}
enum hs_write_rc_e hs_write_socket(http_request_t *request) {
  int bytes =
      write(request->socket, request->buffer.buf + request->bytes_written,
            request->buffer.length - request->bytes_written);
  if (bytes > 0)
    request->bytes_written += bytes;
  enum hs_write_rc_e rc = HS_WRITE_RC_SUCCESS;
  if (errno == EPIPE) {
    rc = HS_WRITE_RC_SOCKET_ERR;
  } else {
    if (request->bytes_written != request->buffer.length) {
      rc = HS_WRITE_RC_CONTINUE;
    } else if (HTTP_FLAG_CHECK(request->flags, HTTP_CHUNKED_RESPONSE)) {
      rc = HS_WRITE_RC_SUCCESS_CHUNK;
    } else {
      if (HTTP_FLAG_CHECK(request->flags, HTTP_KEEP_ALIVE)) {
        rc = HS_WRITE_RC_SUCCESS;
      } else {
        rc = HS_WRITE_RC_SUCCESS_CLOSE;
      }
    }
  }
  return rc;
}